--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,9 +1,16 @@
 body {
-    background: black;
-}
-
-.wrapper {
     display: flex;
     justify-content: center;
-    margin-top: 2%;
+    width: 100%;
+}
+
+.canvasWrapper {
+    display: flex;
+    justify-content: center;
+    margin: 2% 0;
+}
+
+.settingsWrapper {
+    display: flex;
+    justify-content: center;
 }
