--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+$body-bg: #000;
+
+@import '~bootstrap/scss/bootstrap.scss';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
