--- a/src/app/App.css
+++ b/src/app/App.css
@@ -10,7 +10,8 @@ body {
     margin: 2% 0;
 }
 
-.settingsWrapper {
+.stuffWrapper {
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
